Add a pause building button for mobile

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -5,3 +5,5 @@ adminbutton2.admindialog.send_random_message = Send random Message
 adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
 adminbutton2.message_list.title = Message list
+adminbutton2.pause_building = Pause
+
