--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -6,4 +6,5 @@ adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
 adminbutton2.message_list.title = Message list
 adminbutton2.pause_building = Pause
+adminbutton2.secrets.title = Secrets
 
