--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -4,6 +4,9 @@ adminbutton2.admindialog.secret_message = Secret message
 adminbutton2.admindialog.send_random_message = Send random Message
 adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
+adminbutton2.controller.automatic_movement = Automatic movement
+adminbutton2.controller.automatic_movement.mine = Mine
+adminbutton2.controller.title = Player controller
 adminbutton2.message_list.title = Message list
 adminbutton2.pause_building = Pause
 adminbutton2.secrets.title = Secrets
