--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -10,6 +10,7 @@ adminbutton2.controller.title = Player controller
 adminbutton2.message_list.title = Message list
 adminbutton2.pause_building = Pause
 adminbutton2.secrets.title = Secrets
+adminbutton2.settings.override_chatfrag = Use modded ChatFragment
 adminbutton2.settings.override_input_handler = Use modded InputHandler
 adminbutton2.settings.pause_building_button = Add pause building button
 
