Add image generator that uses sorter block

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -7,6 +7,11 @@ adminbutton2.admindialog.title = Admin button
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
 adminbutton2.controller.title = Player controller
+adminbutton2.imagegenerator.generate = Generate
+adminbutton2.imagegenerator.selectimage = Select image
+adminbutton2.imagegenerator.size = Width: {0}, Height: {1}
+adminbutton2.imagegenerator.title = Image generator
+adminbutton2.imagegenerator.toolarge = Schematic is too large. It will not be saved and it might cause the game to exit unexpectedly
 adminbutton2.message_list.title = Message list
 adminbutton2.pause_building = Pause
 adminbutton2.secrets.title = Secrets
