Add admin panel

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,3 +1,5 @@
+adminbutton2.adminbutton.adminpanel.button.drag = Drag panel
+adminbutton2.adminbutton.adminpanel.button.row = New row
 adminbutton2.admindialog.icon_chooser.title = Icon chooser
 adminbutton2.admindialog.message_above_limit = Final message length is above the text limit
 adminbutton2.admindialog.secret_message = Secret message
@@ -6,6 +8,7 @@ adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
+adminbutton2.controller.enable_controller = Enable controller
 adminbutton2.controller.title = Player controller
 adminbutton2.imagegenerator.generate = Generate
 adminbutton2.imagegenerator.selectimage = Select image
@@ -13,6 +16,7 @@ adminbutton2.imagegenerator.size = Width: {0}, Height: {1}
 adminbutton2.imagegenerator.title = Image generator
 adminbutton2.imagegenerator.toolarge = Schematic is too large. It will not be saved and it might cause the game to exit unexpectedly
 adminbutton2.message_list.title = Message list
+adminbutton2.panelconfig.title = Configure panel
 adminbutton2.pause_building = Pause
 adminbutton2.secrets.title = Secrets
 adminbutton2.settings.override_chatfrag = Use modded ChatFragment
