--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -9,6 +9,9 @@ adminbutton2.admindialog.title = Admin button
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
 adminbutton2.controller.enable_controller = Enable controller
+adminbutton2.controller.push_player = Push player
+adminbutton2.controller.push_player.push_from_behind = Push from behind
+adminbutton2.controller.push_player.push_to_coordinates = Push to coordinates
 adminbutton2.controller.title = Player controller
 adminbutton2.imagegenerator.generate = Generate
 adminbutton2.imagegenerator.selectimage = Select image
