Add a command handler with commands "help", "js" and "sc"

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -6,6 +6,12 @@ adminbutton2.admindialog.secret_message = Secret message
 adminbutton2.admindialog.send_random_message = Send random Message
 adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
+adminbutton2.command.error.few_arguments = [scarlet]Command [white]{0}[] takes [white]more[] arguments.
+adminbutton2.command.error.many_arguments = [scarlet]Command [white]{0}[] takes [white]less[] arguments.
+adminbutton2.command.help.description = Display a dialog that shows all commands.
+adminbutton2.command.help.dialog.title = Commands
+adminbutton2.command.js.description = Run JavaScript code.
+adminbutton2.command.sc.description = Send a secret/random message via chat.
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
 adminbutton2.controller.enable_controller = Enable controller
