--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -6,6 +6,12 @@ adminbutton2.admindialog.secret_message = Secret message
 adminbutton2.admindialog.send_random_message = Send random Message
 adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
+adminbutton2.autofill.core_minimum_request_amount = Minimum amount of items in the core
+adminbutton2.autofill.enabled = Enable AutoFill
+adminbutton2.autofill.fill_only_selected_buildings = AutoFill only selected buildings
+adminbutton2.autofill.interaction_cooldown = Interaction cooldown
+adminbutton2.autofill.select_buildings = Select buildings for AutoFill
+adminbutton2.autofill_config.title = Configure AutoFill
 adminbutton2.command.error.few_arguments = [scarlet]Command [white]{0}[] takes [white]more[] arguments.
 adminbutton2.command.error.many_arguments = [scarlet]Command [white]{0}[] takes [white]less[] arguments.
 adminbutton2.command.help.description = Display a dialog that shows all commands.
