--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -6,10 +6,8 @@ adminbutton2.admindialog.secret_message = Secret message
 adminbutton2.admindialog.send_random_message = Send random Message
 adminbutton2.admindialog.send_secret_message = Send secret Message
 adminbutton2.admindialog.title = Admin button
-adminbutton2.autofill.core_minimum_request_amount = Minimum amount of items in the core
 adminbutton2.autofill.enabled = Enable AutoFill
 adminbutton2.autofill.fill_only_selected_buildings = AutoFill only selected buildings
-adminbutton2.autofill.interaction_cooldown = Interaction cooldown
 adminbutton2.autofill.select_buildings = Select buildings for AutoFill
 adminbutton2.autofill_config.title = Configure AutoFill
 adminbutton2.command.error.few_arguments = [scarlet]Command [white]{0}[] takes [white]more[] arguments.
@@ -34,7 +32,9 @@ adminbutton2.message_list.title = Message list
 adminbutton2.panelconfig.title = Configure panel
 adminbutton2.pause_building = Pause
 adminbutton2.secrets.title = Secrets
-adminbutton2.settings.override_chatfrag = Use modded ChatFragment
-adminbutton2.settings.override_input_handler = Use modded InputHandler
-adminbutton2.settings.pause_building_button = Add pause building button
+setting.adminbutton2.autofill.core_minimum_request_amount.name = Minimum amount of items in the core
+setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Interaction cooldown
+setting.adminbutton2.settings.override_chatfrag.name = Use modded ChatFragment
+setting.adminbutton2.settings.override_input_handler.name = Use modded InputHandler
+setting.adminbutton2.settings.pause_building_button.name = Add pause building button
 
