--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -16,6 +16,8 @@ adminbutton2.command.help.description = Display a dialog that shows all commands
 adminbutton2.command.help.dialog.title = Commands
 adminbutton2.command.js.description = Run JavaScript code.
 adminbutton2.command.sc.description = Send a secret/random message via chat.
+adminbutton2.command.sm.description = Send a secret message via selected building.
+adminbutton2.communication.selectBuilding = A building is not selected. To select a building tap on it. Only message blocks can be selected.
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
 adminbutton2.controller.enable_controller = Enable controller
