Show a notification in secrets dialog when buttons are being clicked too frequently

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -33,6 +33,7 @@ adminbutton2.imagegenerator.toolarge = Schematic is too large. It will not be sa
 adminbutton2.message_list.title = Message list
 adminbutton2.panelconfig.title = Configure panel
 adminbutton2.pause_building = Pause
+adminbutton2.secrets.chat_warning = This button sends chat messages
 adminbutton2.secrets.title = Secrets
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Minimum amount of items in the core
 setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Interaction cooldown
