--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -37,6 +37,7 @@ adminbutton2.secrets.chat_warning = This button sends chat messages
 adminbutton2.secrets.title = Secrets
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Minimum amount of items in the core
 setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Interaction cooldown
+setting.adminbutton2.commands.prefix.name = Command prefix
 setting.adminbutton2.settings.override_chatfrag.name = Use modded ChatFragment
 setting.adminbutton2.settings.override_input_handler.name = Use modded InputHandler
 setting.adminbutton2.settings.pause_building_button.name = Add pause building button
