Add an option to allow saving build plans when changing units

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -41,4 +41,5 @@ setting.adminbutton2.commands.prefix.name = Command prefix
 setting.adminbutton2.settings.override_chatfrag.name = Use modded ChatFragment
 setting.adminbutton2.settings.override_input_handler.name = Use modded InputHandler
 setting.adminbutton2.settings.pause_building_button.name = Add pause building button
+setting.adminbutton2.settings.plan_saver.enabled.name = Save build plans when changing units
 
