Add smt command to allow toggling sending secret messages via building

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -17,6 +17,7 @@ adminbutton2.command.help.dialog.title = Commands
 adminbutton2.command.js.description = Run JavaScript code.
 adminbutton2.command.sc.description = Send a secret/random message via chat.
 adminbutton2.command.sm.description = Send a secret message via selected building.
+adminbutton2.command.smt.description = Toggle sending secret messages via selected building.
 adminbutton2.communication.selectBuilding = A building is not selected. To select a building tap on it. Only message blocks can be selected.
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
