Replace message list dialog with new chat dialog in admin dialog.

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -10,6 +10,10 @@ adminbutton2.autofill.enabled = Enable AutoFill
 adminbutton2.autofill.fill_only_selected_buildings = AutoFill only selected buildings
 adminbutton2.autofill.select_buildings = Select buildings for AutoFill
 adminbutton2.autofill_config.title = Configure AutoFill
+adminbutton2.chatdialog.example_message = Example message
+adminbutton2.chatdialog.message_postfix = Postfix
+adminbutton2.chatdialog.message_prefix = Prefix
+adminbutton2.chatdialog.title = Chat
 adminbutton2.command.error.few_arguments = [scarlet]Command [white]{0}[] takes [white]more[] arguments.
 adminbutton2.command.error.many_arguments = [scarlet]Command [white]{0}[] takes [white]less[] arguments.
 adminbutton2.command.help.description = Display a dialog that shows all commands.
