--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -19,6 +19,8 @@ adminbutton2.command.error.many_arguments = [scarlet]Command [white]{0}[] takes 
 adminbutton2.command.help.description = Display a dialog that shows all commands.
 adminbutton2.command.help.dialog.title = Commands
 adminbutton2.command.js.description = Run JavaScript code.
+adminbutton2.command.linknodes.description = Link unlinked buildings with power nodes.
+adminbutton2.command.linknodes.new_links = {0} new links were created
 adminbutton2.command.sc.description = Send a secret/random message via chat.
 adminbutton2.command.sm.description = Send a secret message via selected building.
 adminbutton2.command.smt.description = Toggle sending secret messages via selected building.
@@ -41,8 +43,8 @@ adminbutton2.pause_building = Pause
 adminbutton2.secrets.chat_warning = This button sends chat messages
 adminbutton2.secrets.title = Secrets
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Minimum amount of items in the core
-setting.adminbutton2.autofill.interaction_cooldown_milliseconds.name = Interaction cooldown
 setting.adminbutton2.commands.prefix.name = Command prefix
+setting.adminbutton2.interaction.interaction_cooldown_milliseconds.name = Interaction cooldown
 setting.adminbutton2.settings.override_chatfrag.name = Use modded ChatFragment
 setting.adminbutton2.settings.override_input_handler.name = Use modded InputHandler
 setting.adminbutton2.settings.pause_building_button.name = Add pause building button
