--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -24,7 +24,9 @@ adminbutton2.command.linknodes.new_links = {0} new links were created
 adminbutton2.command.sc.description = Send a secret/random message via chat.
 adminbutton2.command.sm.description = Send a secret message via selected building.
 adminbutton2.command.smt.description = Toggle sending secret messages via selected building.
+adminbutton2.communication.playerSharedSchematic = {0}[white] shared a schematic
 adminbutton2.communication.selectBuilding = A building is not selected. To select a building tap on it. Only message blocks can be selected.
+adminbutton2.communication.sendSchematicFromClipboard = Send schematic from clipboard
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
 adminbutton2.controller.enable_controller = Enable controller
