--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -47,6 +47,7 @@ adminbutton2.secrets.title = Secrets
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Minimum amount of items in the core
 setting.adminbutton2.commands.prefix.name = Command prefix
 setting.adminbutton2.interaction.interaction_cooldown_milliseconds.name = Interaction cooldown
+setting.adminbutton2.settings.block_replacer.enabled.name = Alternative block placement for some blocks
 setting.adminbutton2.settings.override_chatfrag.name = Use modded ChatFragment
 setting.adminbutton2.settings.override_input_handler.name = Use modded InputHandler
 setting.adminbutton2.settings.pause_building_button.name = Add pause building button
