--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -24,6 +24,7 @@ adminbutton2.command.linknodes.new_links = {0} new links were created
 adminbutton2.command.sc.description = Send a secret/random message via chat.
 adminbutton2.command.sm.description = Send a secret message via selected building.
 adminbutton2.command.smt.description = Toggle sending secret messages via selected building.
+adminbutton2.command.sn.description = Send a normal message via chat.
 adminbutton2.communication.playerSharedSchematic = {0}[white] shared a schematic
 adminbutton2.communication.selectBuilding = A building is not selected. To select a building tap on it. Only processor, message and canvas blocks can be selected.
 adminbutton2.communication.sendSchematicFromClipboard = Send schematic from clipboard
