--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -45,6 +45,7 @@ adminbutton2.panelconfig.title = Configure panel
 adminbutton2.pause_building = Pause
 adminbutton2.secrets.chat_warning = This button sends chat messages
 adminbutton2.secrets.title = Secrets
+keybind.adminbutton2.static_camera.name = Static Camera
 setting.adminbutton2.autofill.core_minimum_request_amount.name = Minimum amount of items in the core
 setting.adminbutton2.commands.prefix.name = Command prefix
 setting.adminbutton2.interaction.interaction_cooldown_milliseconds.name = Interaction cooldown
