--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -28,6 +28,7 @@ adminbutton2.command.sn.description = Send a normal message via chat.
 adminbutton2.communication.playerSharedSchematic = {0}[white] shared a schematic
 adminbutton2.communication.selectBuilding = A building is not selected. To select a building tap on it. Only processor, message and canvas blocks can be selected.
 adminbutton2.communication.sendSchematicFromClipboard = Send schematic from clipboard
+adminbutton2.consoledialog.title = Console
 adminbutton2.controller.automatic_movement = Automatic movement
 adminbutton2.controller.automatic_movement.mine = Mine
 adminbutton2.controller.enable_controller = Enable controller
